<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/logInFragment">

    <fragment
        android:id="@+id/shoppingFragment"
        android:name="edu.ub.pis2324.xoping.presentation.ui.fragments.ShoppingFragment"
        android:label="@string/shop_title" >
        <action
            android:id="@+id/action_shoppingFragment_to_viewProductDetailsFragment"
            app:destination="@id/viewProductDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewProductDetailsFragment"
        android:name="edu.ub.pis2324.xoping.presentation.ui.fragments.ViewProductDetailsFragment"
        android:label="@string/view_product_details_title" >
        <argument
            android:name="PRODUCT"
            app:argType="edu.ub.pis2324.xoping.presentation.pos.ProductPO" />
        <action
            android:id="@+id/action_viewProductDetailsFragment_to_shoppingFragment"
            app:destination="@id/shoppingFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="edu.ub.pis2324.xoping.presentation.ui.fragments.CartFragment"
        android:label="@string/cart_title" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="edu.ub.pis2324.xoping.presentation.ui.fragments.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_logInFragment2"
            app:destination="@id/logInFragment"
            app:popUpTo="@id/logInFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/logInFragment"
        android:name="edu.ub.pis2324.xoping.presentation.ui.fragments.LogInFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_log_in" >
        <action
            android:id="@+id/action_logInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_logInFragment_to_shoppingFragment"
            app:destination="@id/shoppingFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="edu.ub.pis2324.xoping.presentation.ui.fragments.SignUpFragment"
        android:label="@string/signup_title"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_logInFragment"
            app:destination="@id/logInFragment" />
    </fragment>
</navigation>