<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.fragments.SignUpFragment">

    <!--    <androidx.appcompat.widget.Toolbar-->
    <!--        android:id="@+id/tbSignUp"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="?attr/colorPrimary"-->
    <!--        android:minHeight="?attr/actionBarSize"-->
    <!--        android:theme="?attr/actionBarTheme"-->
    <!--        app:navigationIcon="@drawable/baseline_arrow_back_48"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">
        <!--        app:layout_constraintTop_toBottomOf="@+id/tbSignUp"-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:layout_margin="6dp">

            <TextView
                android:id="@+id/tvSignupTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/signup_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/etSignupUsername"
                app:layout_constraintHorizontal_bias="0.408"
                app:layout_constraintStart_toStartOf="@+id/etSignupUsername"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etSignupUsername"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/signup_enter_username_hint"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="18sp"
                android:drawableLeft="@drawable/baseline_person_outline_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tvSignupTitle" />

            <EditText
                android:id="@+id/etSignUpEmail"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/signup_email_hint"
                android:inputType="text|textEmailAddress"
                android:textAlignment="center"
                android:textSize="18sp"
                android:drawableLeft="@drawable/baseline_email_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/etSignupUsername" />

            <EditText
                android:id="@+id/etSignupPassword"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/signup_enter_password_hint"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="18sp"
                android:drawableLeft="@drawable/baseline_password_24"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="@+id/etSignupUsername"
                app:layout_constraintTop_toBottomOf="@+id/etSignUpEmail" />

            <EditText
                android:id="@+id/etSignupPasswordConfirmation"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/signup_enter_password_confirmation_hint"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/baseline_password_24"
                app:layout_constraintStart_toStartOf="@+id/etSignupPassword"
                app:layout_constraintTop_toBottomOf="@+id/etSignupPassword" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/signup_confirmation_button"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/etSignupPasswordConfirmation"
                app:layout_constraintStart_toStartOf="@+id/etSignupPasswordConfirmation"
                app:layout_constraintTop_toBottomOf="@+id/etSignupPasswordConfirmation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:justificationMode="inter_word"
        android:text="@string/disclaimer_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>