<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="16dp">

<!--    <ImageView-->
<!--        android:id="@+id/ivProfileImage"-->
<!--        android:layout_width="240dp"-->
<!--        android:layout_height="240dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginBottom="24dp"-->
<!--        android:src="@drawable/ic_launcher_foreground" />-->

    <androidx.cardview.widget.CardView
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:elevation="24dp"
        android:id="@+id/cvProfilePhoto"
        app:cardCornerRadius="112dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/ivProfileImage"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvProfileId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/element_text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/element_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/edit_profile_button"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:text="@string/logout_button"
        android:textSize="16sp" />

</LinearLayout>
